[package]
name = "ccc"
version = "0.1.0"
edition = "2021"
description = "Claude settings switcher"
license = "MIT"
repository = "https://github.com/weibaohui/ccc"

[[bin]]
name = "ccc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
