[package]
name = "ccc"
version = "0.3.0"
edition = "2021"
description = "Claude settings switcher for AI agents"
license = "MIT"
repository = "https://github.com/weibaohui/ccc"

[[bin]]
name = "ccc"
path = "src/main.rs"

[build-dependencies]
zip = "2"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
zip = "2"